# lsif-ocaml

./: .gitignore  package.json
esy.lock/: index.json
src/: dune  main.ml
